set(MPITEST   1)
set(RANGE     0)
set(STOPWATCH 0)
set(THREADS   0)
set(VECTORS   0)


if (MPITEST)
    message(STATUS "Build mpi test")
    add_executable(mpitest mpitest.cpp)
    target_include_directories(mpitest PUBLIC zephyr)
    target_link_libraries(mpitest PUBLIC zephyr)
    install(TARGETS mpitest DESTINATION tests)
endif()

if (RANGE)
    message(STATUS "Build range test")
    add_executable(range range.cpp)
    target_include_directories(range PUBLIC zephyr)
    target_link_libraries(range PUBLIC zephyr)
    install(TARGETS range DESTINATION tests)
endif()

if (VECTORS)
    message(STATUS "Build vectors test")
    add_executable(vectors vectors.cpp)
    target_include_directories(vectors PUBLIC zephyr)
    target_link_libraries(vectors PUBLIC zephyr)
    install(TARGETS vectors DESTINATION tests)
endif()

if (STOPWATCH)
    message(STATUS "Build stopwatch test")
    add_executable(stopwatch stopwatch.cpp)
    target_include_directories(stopwatch PUBLIC zephyr)
    target_link_libraries(stopwatch PUBLIC zephyr)
    install(TARGETS stopwatch DESTINATION tests)
endif()

if (THREADS)
    message(STATUS "Build multithreading test")
    add_executable(threads threads.cpp)
    target_include_directories(threads PUBLIC zephyr)
    target_link_libraries(threads PUBLIC zephyr)
    install(TARGETS threads DESTINATION tests)
endif()